--- a/_includes/analytics-providers/google.html
+++ b/_includes/analytics-providers/google.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
   var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', '{{ site.analytics.google.tracking_id }}']);
+  _gaq.push(['_setAccount', '{{ google-site-verification=Z9I6a3OMhzz2PHeKLTUblhDsMyZXz44VgaJb7H6pqpM }}']);
   _gaq.push(['_trackPageview']);
 
   (function() {
